FIX db and colors

--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -24,9 +24,9 @@
 
     <item
         android:id="@+id/item_favorites"
+        android:icon="@color/colorPrimaryDark"
         android:orderInCategory="3"
         android:title="@string/loadFavorites"
-        app:showAsAction="ifRoom"
-        />
+        app:showAsAction="ifRoom" />
 
 </menu>
