--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#9E9E9E</color>
+    <color name="colorPrimaryDark">#212121</color>
     <color name="black">#000000</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="movieTitleDetail">#FFFFFF</color>
-    <color name="movieTitle">#000000</color>
+    <color name="colorAccent">#FAFAFA</color>
+    <color name="movieTitleDetail">#FAFAFA</color>
+    <color name="movieTitle">#212121</color>
     <color name="SpinnerTextColor">#000000</color>
+
 </resources>
