--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,19 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">@color/movieTitleDetail</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
-        <!--<item name="android:spinnerDropDownItemStyle">@style/SpinnerTheme</item>-->
     </style>
 
-    <!--<style name="SpinnerTheme" parent = "Theme.AppCompat.Light.DarkActionBar">-->
-        <!--<item name="android:textColor">@color/SpinnerTextColor</item>-->
-    <!--</style>-->
+    <style name="ReyclerStyle" parent ="ApplicationTheme">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">@dimen/movieTitle</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:fontFamily">sans-serif</item>
+
+    </style>
+
 </resources>
