--- a/app/src/main/res/drawable/border_favorite.xml
+++ b/app/src/main/res/drawable/border_favorite.xml
@@ -5,7 +5,7 @@
     >
     <gradient
         android:startColor="@color/colorNormal"
-        android:endColor="@color/colorAccent"
+        android:endColor="@color/colorPrimaryDark"
         android:angle="270"/>
 
 
