--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,5 +13,5 @@
     <dimen name="moviePosterHeight">181dp</dimen>
     <dimen name="configTextSize">18sp</dimen>
     <dimen name="configTopBorder">16dp</dimen>
-
+    <dimen name="paddingHorizontal">4dp</dimen>
 </resources>
